\name{NEWS}
\title{blackbox News}
\encoding{UTF-8}
\section{CHANGES UP TO VERSION 1.1.43}{  
\subsection{NEW FEATURES}{
\itemize{
\item Much faster init_grid() (and likely more minor gains in other functions too).
\item New init_grid(., maxmin) argument.
}
}
\subsection{DEPENDENCIES}{
\itemize{
\item New dependency 'matrixStats'.
}
}
}
\section{CHANGES UP TO VERSION 1.1.32}{
\subsection{USER-LEVEL CHANGES}{
\itemize{
\item Checks of invalid input (and resulting screen output) adapted to non-Migraine usage.
}
}
\subsection{DEPENDENCIES}{
\itemize{
\item 'lbfgsb3' is replaced by 'lbfgsb3c' as a suggested package.
\item Requests a more recent (>= 3.1.0) version of 'spaMM'.
}
}
}
\section{CHANGES UP TO VERSION 1.1.27}{
\subsection{CORRECTED BUGS}{
\itemize{
\item Long-standing glitch that substantially slowed blackbox down (though with correct results).
}
}
}
\section{CHANGES UP TO VERSION 1.1.25}{
\subsection{USER-LEVEL CHANGES}{
\itemize{
\item (Migraine-specific) New composite parameters and profile computations for migration parameters.
\item Dependency on 'ff' package removed, assuming a recent version of spaMM (here >= 2.4.8).
\item Dependencies changed for parallel computations. See help("blackbox.options") for details.
}
}
\subsection{CORRECTED BUGS}{
\itemize{
\item (Migraine-specific) writeFinalInfo() now correctly writes the results when sampleByResp() has not been run.
\item (Migraine-specific) CKrigcoefs() could fail when minSmoothness=maxSmoothness.
\item (Migraine-specific) user-given 'CovFnParam' were ignored.
\item (Migraine-specific) now computes Dgmu parameter only when Dg/2N is a parameter of the model (e.g. not a for a discrete change in pop size).
\item (Migraine-specific) resetCHull() handles input points in linear space of lower dimension than the number of fitted parameters, now avoiding a bug in the rare case where there are many profile points, all of them in such a space. 
}
}
} 
\section{CHANGES UP TO VERSION 1.1.7}{