@@ -1,5 +1,5 @@
-99d18568a32ef56f253a0d75bd4cca22 *DESCRIPTION
-534bb05468c3bd64c2addcd180f79273 *NAMESPACE
+b578ed3786787fc4b5080fd7fb0c4aad *DESCRIPTION
+a45aeb2d6f75f76f1080153ed8fa88eb *NAMESPACE
 6a954864c4c9cb92e79a3273768b5ade *R/AUEformat.R
 a5993578f1ed63e7b9cc2081f3397b32 *R/CKrigcoefs.R
 aa18b8801f9e6c700e292468a2371cdc *R/Cpredict.R
@@ -119,10 +119,10 @@ c7e0eb82031a4088b5c912518b86ddb0 *R/writeFinalInfo.R
 bb268ba746830c1b87b74c81a8c446e9 *R/writeoutput.R
 4608bec2d45ac625290f4146246259c6 *R/zoomProfile.R
 92274353c06a2fe0a77c77b7d5671fb9 *inst/CITATION
-16e6128e2437216c529aa35326181306 *inst/NEWS.Rd
+89314ba23ee1e13d3768d88eaddfad95 *inst/NEWS.Rd
 668b2e17159d82b455283df0a825835b *man/bboptim.Rd
 a8daae66928769a8c892b0ede441bd1b *man/blackbox-internal.Rd
-c6c94b83fa1827abcaa623c3eb703180 *man/blackbox.Rd
+4fadf7274ac92b50c2b834c720fc8284 *man/blackbox.Rd
 6f3a7425d7599766e2ee7e87a41ded62 *man/buildFONKgpointls.Rd
 d17bd6673997a7a56730fe898a3f2c8e *man/buildPointls.Rd
 ffa31c595217360eecef6b0409d3a05c *man/calc1DCIs.Rd
@@ -137,23 +137,24 @@ cd83e7ebdd4326674caec8d9f0bb2b1b *man/maximizeOK.Rd
 ac8c7de76941fa4dd7e2ca012dc32ddf *man/prepareData.Rd
 b7d314c0d8909085bc6395564f1206e8 *man/preprocessbboptions.Rd
 41b52ba037086b884fc76797f03a9e20 *man/sampleByResp.Rd
-3c5c04185be8c31631c71f09ab41211d *man/saveOldFile.Rd
+f1509db30462c3dc57d8a7cb858403ba *man/saveOldFile.Rd
 88adf25c3ee2ede0129d2c7507272a89 *man/writeFinalInfo.Rd
 071c8815ae20672782f16214a88ba629 *src/Bessel.h
 fa870ef4bc21e00f206e58aaaa4e79c1 *src/Bessel_nr.h
-6fe98f40dce9d1c1ae5a42b0fc8a0b66 *src/Krigmain.cpp
+3c6b5f5109f5fbb648a5f3aac34b164a *src/Krigmain.cpp
 62e545e1a141f0bbc4f9c226f824ae9c *src/Krigmain.h
 fe2075f95e358aeec4c062888a07c943 *src/Krigtypes.h
+915c3b5399e682ccad2a63ee16ecf04d *src/Makevars
 101b72bf656b316770a98595b9ed79b2 *src/Makevars.win
-04c6a5d40e3240f2ca95b16c817d0243 *src/Matern.h
+d6e11b65b8262b6a90fcc9915eef752f *src/Matern.h
 dc798ecdb36b01959986803ebfc6b95e *src/RcppExports.cpp
 e025690fd4e0172ab7fefa1bf7990dac *src/gammln.h
 e2295e4571e26d1cc4f6a8c0bda4f7b0 *src/intern_newCSmooth.h
 1aad4b59f5298e8ad95c75e3c533c1c1 *src/pointls.cpp
 ed2c2fdd73674dbb0e04fef1ff8d3f7d *src/pointls.h
 5f0e5259ce42cebf9ca3f90df5ade404 *src/qr.h
-d874707494b3de9ff4deb70f98edd86c *src/smooth.cpp
-1a54bd5bca7cb667814ebf0a75182a20 *src/smooth.h
-1ea1ce5bba5b22dce3a41495a4daad91 *src/smoothFriends.h
+3a91ffc16ff8080484f67d9417b4a5e6 *src/smooth.cpp
+df5b742d5c710cf4e1baccdd81110c67 *src/smooth.h
+9e02ba345294888e7f6ddf5b4430589f *src/smoothFriends.h
 9936324db00ca2bb9eeed0f163ff2778 *tests/test-all.R
 333908f50542fa8b7a6921dea55dbae4 *tests/testthat/test-1D.R
